# CopperOptimization

./: .gitignore  CMakeLists.txt  README.md
libs/FileProcessing/: CMakeLists.txt  load.cpp  load.h
libs/Geometry/: CMakeLists.txt  geometry.cpp  geometry.h
libs/Visualization/: CMakeLists.txt  visualization.cpp  visualization.h
src/: geometry.cpp  geometry.h  main.cpp  makefile
